# VoxInput

./: .env.example  .gitignore  GITHUB_SETUP.md  LICENSE  PHANTOM.md  README.md  ab_test.sh  diagnose_audio.py  evaluate_ab.py  install.sh  list_microphones.py  measure_perf.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run.py  settings.example.json  settings.json  strace.out  testing_suite.py  voxinput.desktop
.agent/workflows/: git-commit.md  reset-environment.md  safe-commands.md  safe_commands.md  testfix.md
CODEX/00_INDEX/: MANIFEST.yaml
CODEX/05_PROJECT/: BCK-001_Governance_Remediation.md  SPR-001_Disaster_Readability.md  SPR-002_Type_Strictness_and_Safety.md  SPR-003_Test_Coverage_Audit.md  SPR-004_NASA_Error_Taxonomy.md  SPR-005_NASA_Test_Cascade.md  SPR-006_Trace_Logging_Instrumentation.md  SPR-007_Test_Suite_Hardening.md
CODEX/10_GOVERNANCE/: GOV-008_InfrastructureAndOperations.md
CODEX/20_BLUEPRINTS/: BLU-001_System_Specification.md
CODEX/90_ARCHIVE/: DEF-PTT-001_Race_Condition_Bug.md  SPR-002_Type_Strictness_and_Safety.md  (+4 more)
assets/: create_banner.py
data/: custom_words.db-shm  custom_words.db-wal  seed_words.py
docs/: CONTRIBUTING.md  PTT_RACE_CONDITION_BUG.md  VX-FED-001.md
reports/: e2e_report.html
src/: audio.py  audio_feedback.py  config.py  errors.py  hardware_profile.py  homophones.py  injection.py  logger.py  main.py  mic_enhancer.py  pulseaudio_helper.py  recognizer.py  settings.py  spell_corrector.py  ui.py  word_db.py
tests/: conftest.py  test_components.py  test_environment.py
tools/: record_paragraph.py
(+44 files in other folders)
